src/validation/tests/parse_errors/snapshots/rusty__validation__tests__parse_errors__parse_error_containers_tests__unclosed_var_container.snap
---
source: src/parser/tests/parse_errors/parse_error_containers_tests.rs
expression: diagnostics
---
error[E007]: Unexpected token: expected KeywordEndVar but found 'VAR b : INT;'
  ┌─ <internal>:4:21
  │
4 │                     VAR b : INT; END_VAR
  │                     ^^^^^^^^^^^^ Unexpected token: expected KeywordEndVar but found 'VAR b : INT;'
